# dockgen

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
completions/: dct.bash  dockgen.bash
dct/: __main__.py  cli.py  config.py  ros.py  wizard.py
dct/probes/: display.py  vscode.py
dct/renderers/: compose.py  devcontainer.py  dockerfile.py
debian/: changelog  control  copyright  debhelper-build-stamp  files  python3-dockgen.postinst.debhelper  python3-dockgen.prerm.debhelper
debian/source/: options
dockgen/: __main__.py  cli.py  colors.py  config.py  wizard.py
dockgen/probes/: gpu.py
dockgen/renderers/: compose.py  devcontainer.py  dockerfile.py
man/: dct.1  dockgen.1
