[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dct"
version = "0.1.0"
description = "Docker Container Tool for ROS and general development"
requires-python = ">=3.8"

[project.scripts]
dct = "dct.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dct*"]
